# art_perception

./: .dockerignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.rst  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/art_perception/: __init__.py  art_perception.py  cli.py
src/art_perception/domain/: __init__.py  domain.py  extract.py  extract_colorfullness.py  histogram_peaks_extractor.py  kmeans_extractor.py  utilities.py
tests/: __init__.py  test_art_perception.py
