[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "art_perception"
version = "0.1.0"
description = "Art Perception contains all the tools you need to obegin observing attributes found in art and sharing this information to a digital audience."
readme = "README.rst"
authors = [
  {name = "David Richards", email = "davidlamontrichards@gmail.com"}
]
maintainers = [
  {name = "David Richards", email = "davidlamontrichards@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
license = {text = "MIT license"}
dependencies = [
    "opencv-python",
    "pillow",
    "numpy",
    "scikit-learn",
    "requests",
    "typer",
    "rich"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]
bugs = "https://github.com/davidrichards/art_perception/issues"
changelog = "https://github.com/davidrichards/art_perception/blob/master/changelog.md"
homepage = "https://github.com/davidrichards/art_perception"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

